Add Baidu Analysis

--- a/themes/material/_config.yml
+++ b/themes/material/_config.yml
@@ -185,7 +185,7 @@ sns_share:
 sidebar:
     dropdown:
         Email Me:
-            link: "mailto: leoluo22@gmail.com"
+            link: "mailto:leoluo22@gmail.com"
             icon: email
     homepage:
         use: true
@@ -225,18 +225,18 @@ sidebar:
 # If you want to use gitment,you should get the client_id and client_secret form https://github.com/settings/applications/new
 # If you want to use valine,you should get the app_id and app_key form https://leancloud.cn ,more setting please see https://github.com/xCss/Valine
 comment:
-    use:
-    shortname: # duoshuo or disqus shortname
-    changyan_appid:
-    changyan_conf:
-    changyan_thread_key_type: path
-    livere_data_uid:
-    gitment_repo:   # git repo of the hexo
-    gitment_owner:  # git repo's owner
-    gitment_client_id:  # github app client id
-    gitment_client_secret :  # github app client secret
-    valine_leancloud_appId: # leancloud application app id
-    valine_leancloud_appKey: # leancloud application app key
+    use: valine
+    #shortname: # duoshuo or disqus shortname
+    #changyan_appid:
+    #changyan_conf:
+    #changyan_thread_key_type: path
+    #livere_data_uid:
+    #gitment_repo:   # git repo of the hexo
+    #gitment_owner:  # git repo's owner
+    #gitment_client_id:  # github app client id
+    #gitment_client_secret :  # github app client secret
+    valine_leancloud_appId: 8qDKU78IBtlO6QcFsC9uiS1X-gzGzoHsz
+    valine_leancloud_appKey: yAEJnO6Vuq7Bel91k2VLvHoL
 
 # Search Systems
 # Available value:
@@ -250,14 +250,14 @@ search:
 #     baidu | google | cnzz
 analytics:
     google_site_id:
-    baidu_site_id:
+    baidu_site_id: fa7218339ce62cc3d86b2ed7df407e4f
     cnzz_site_id:
 
 # Leancloud Views
 leancloud:
     enable: false
-    app_id: #你的 app_id
-    app_key: #你的 app_key
+    app_id: FkpwiHhxjHetxSbKvIKajFLa-gzGzoHsz
+    app_key: D8AW4YtEbGpqPLx5pnUcmDYy
     av_core_mini: "https://cdn1.lncld.net/static/js/av-core-mini-0.6.1.js"
 
 # Busuanzi 不蒜子 Views
